Add comment on 004_CNN

--- a/week_1/example_codes/004_CNN.ipynb
+++ b/week_1/example_codes/004_CNN.ipynb
@@ -21,12 +21,20 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### API reference\n",
+    "  - https://www.tensorflow.org/api_docs/python/tf/contrib/layers  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
-    "### Convolutional layer 적용 방법\n",
+    "### Convolutional layer\n",
     "  - 이미지가 인풋인 경우 tf.contrib.layers.conv2d()로 간단히 적용 가능\n",
     "    - 인풋: [batch_size, height, width, channel] 크기의 4-dim 데이터\n",
     "    - 주요 함수 파라미터\n",
@@ -44,33 +52,14 @@
     "      - weights_regularizer: L2 normalization과 같은 함수 (default: None)\n",
     "      - biases_initializer\n",
     "      - biases_initializer\n",
-    "    \n",
-    "### Max pooling layer 적용 방법\n",
-    "  - tf.contrib.layers.max_pool2d()로 간단히 적용 가능\n",
-    "  - 인풋: [batch_size, height, width, channel] 크기의 4-dim 데이터\n",
-    "  - 함수 파라미터\n",
-    "    - inputs: 인풋 데이터\n",
-    "    - num_outputs: output dimension\n",
-    "    - kernel_size: 필터 크기\n",
-    "    - stride: stride 크기 (몇 칸씩 움직일 것인가) (default: 2)\n",
-    "    - padding: 양 옆 (가장자리)에 몇 개의 0을 붙일지에 대한 방법 \n",
-    "      - SAME: 입력/출력 데이터 크기 유지되도록 padding\n",
-    "      - VALID: padding 없이 진행"
+    "      - <img src=\"../resource/convolution.png\" width=\"600\" height=\"400\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### API reference\n",
-    "  - https://www.tensorflow.org/api_docs/python/tf/contrib/layers  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### convolutional layer 예제"
+    "#### convolutional layer 예제 1"
    ]
   },
   {
@@ -119,6 +108,11 @@
     "\n",
     "# 1. num_output (1), 필터 크기 (3,3), stride (2)의 convolutional layer \n",
     "conv1 = tf.contrib.layers.conv2d(x, 1, [3,3], 2) # relu 자동 적용\n",
+    "\"\"\"\n",
+    "    위의 conv2d 함수 호출은 사실상 아래의 식과 같음\n",
+    "    conv1 = tf.contrib.layers.conv2d(x, 1, [3,3], 2, activation_fn=None)\n",
+    "    conv1 = tf.nn.relu(conv1)\n",
+    "\"\"\"\n",
     "\n",
     "# 2. relu 비 적용하기\n",
     "conv_noReLu = tf.contrib.layers.conv2d(x, 1, [3,3], 2, activation_fn=None)\n",
@@ -127,7 +121,12 @@
     "conv_dropout = tf.contrib.layers.conv2d(x, 1, [3,3], 2,\\\n",
     "                   normalizer_fn=tf.nn.dropout, \\\n",
     "                   normalizer_params={'keep_prob':0.8})\n",
-    "\n",
+    "\"\"\"\n",
+    "    위의 conv2d 함수 호출은 사실상 아래의 식과 같음\n",
+    "    conv_dropout = tf.contrib.layers.conv2d(x, 1, [3,3], 2, activation_fn=None)\n",
+    "    conv_dropout = tf.nn.relu(conv_dropout)\n",
+    "    conv_dropout = tf.nn.dropout(conv_dropout)\n",
+    "\"\"\"\n",
     "\n",
     "init = tf.global_variables_initializer()\n",
     "with tf.Session() as sess:\n",
@@ -147,6 +146,13 @@
     "    conv_dropout_res = sess.run(conv_dropout, {x:inp})\n",
     "    print 'conv_dropout filer shape: ', conv_dropout_res.shape\n",
     "    print 'conv_dropout:\\n', conv_dropout_res[0,:,:,0], '\\n'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### convolutional layer 예제 2"
    ]
   },
   {
@@ -173,6 +179,12 @@
     "# num_output (1), 필터 크기 (5,5), stride (1)의 convolutional layer\n",
     "# 1. SAME으로 padding 주기\n",
     "same_conv = tf.contrib.layers.conv2d(x, 1, [5,5], 1, padding='SAME')\n",
+    "\"\"\"\n",
+    "    위의 conv2d 함수 호출은 사실상 아래의 식과 같음\n",
+    "    same_conv = tf.contrib.layers.conv2d(x, 1, [5,5], 1, padding='SAME')\n",
+    "    conv_dropout = tf.nn.relu(conv_dropout)\n",
+    "    conv_dropout = tf.nn.dropout(conv_dropout)\n",
+    "\"\"\"\n",
     "\n",
     "# 2. VALID로 padding 주기\n",
     "valid_conv = tf.contrib.layers.conv2d(x, 1, [5,5], 1, padding='VALID')\n",
@@ -189,6 +201,24 @@
     "    \n",
     "    valid_res = sess.run(valid_conv, {x:inp})\n",
     "    print \"shape of 'valid' padding conv result: \", valid_res.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Max pooling layer\n",
+    "  - tf.contrib.layers.max_pool2d()로 간단히 적용 가능\n",
+    "  - 인풋: [batch_size, height, width, channel] 크기의 4-dim 데이터\n",
+    "  - 함수 파라미터\n",
+    "    - inputs: 인풋 데이터\n",
+    "    - num_outputs: output dimension\n",
+    "    - kernel_size: 필터 크기\n",
+    "    - stride: stride 크기 (몇 칸씩 움직일 것인가) (default: 2)\n",
+    "    - padding: 양 옆 (가장자리)에 몇 개의 0을 붙일지에 대한 방법 \n",
+    "      - SAME: 입력/출력 데이터 크기 유지되도록 padding\n",
+    "      - VALID: padding 없이 진행\n",
+    "      - <img src=\"../resource/pooling.png\" width=\"300\" height=\"300\">"
    ]
   },
   {
