--- a/week_1/practice/004_CNN.ipynb
+++ b/week_1/practice/004_CNN.ipynb
@@ -99,6 +99,12 @@
     "    conv2 =\n",
     "    max_pool2 = \n",
     "\n",
+    "    # max_pool2은 (batch_size, pooled_height, pooled_width, channels)의\n",
+    "    # 4-dim의 크기를 가지는 tensor를 아웃풋으로 내놓습니다.\n",
+    "    # 이 아웃풋으로부터 classification을 수행 할 fully connected layer \n",
+    "    # (혹은 linear layer)를 적용하기 위해 \n",
+    "    # (batch_size, pooled_height*pooled_width*channels)의 2-dim의 \n",
+    "    # tensor로 변환하기 위해 flatten()이라는 layer를 추가합니다.\n",
     "    flat_feat = tf.contrib.layers.flatten(max_pool2)\n",
     "\n",
     "    # TODO: 아래 layer를 정의하세요.\n",
