Add solutions for week_1/002,003,004

--- a/week_1/practice/004_CNN.ipynb
+++ b/week_1/practice/004_CNN.ipynb
@@ -327,7 +327,8 @@
     "\n",
     "    # 테스트 데이터에 대한 정확도\n",
     "    print(\"Test Accuracy: \", sess.run(acc, \\\n",
-    "                    feed_dict={imgs: mnist.test.images, labels: mnist.test.labels}))"
+    "                    feed_dict={imgs: mnist.test.images.reshape(-1,28,28,1),\\\n",
+    "                       labels: mnist.test.labels}))"
    ]
   }
  ],
