--- a/week_1/solution/004_CNN.ipynb
+++ b/week_1/solution/004_CNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -21,39 +21,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
-    "## example code에서 성능이 낮았던 multi-layer NN의 성능을 올려봅시다.\n",
-    "### Problem 1. 파라미터 초기화의 중요성 확인\n",
-    "  - all zero 초기화는 좋은 weight 초기화 방법이 아닙니다.\n",
-    "  - linear layer의 weight를 normal distribution으로 초기화 하도록 구현\n",
-    "      - hint: \"normal\"을 tensorflow 홈페이지에서 검색\n",
-    "      - mean은 0으로, stv는 0.1로 설정\n",
-    "  - 약 92% accuracy를 가지도록 learning rate 찾기\n",
-    "  \n",
-    "### Problem 2. Activation function의 중요성 확인\n",
-    "  - linearLayer 함수에서 linear layer의 결과 값에 ReLu 적용\n",
-    "  - linearLayer 함수에서 with_relu=True로 설정\n",
-    "  - 약 97% accuracy를 가짐\n",
-    "\n",
-    "### Problem 3. Dropout 적용\n",
-    "  - linearLayer 함수에서 linear layer의 결과 값 (혹은 Relu를 적용한 값)에 dropout 적용\n",
-    "  - keep_prob은 0.8로 적용\n",
-    "  - linearLayer 함수에서 with_dropout=True로 설정\n",
-    "  - 약 97% accuracy를 가짐 (relu만 적용했을때보다 약간 성능이 떨어짐)\n",
-    "\n",
-    "### Problem 4. \n",
-    "  - 자주 쓰이는 layer는 이미 구현되어 제공됩니다. 제공되는 함수를 이용하여 모델을 정의해봅시다.\n",
-    "  - linearLayer 함수의 인풋 파라미터 use_contribute를 True로 바꾼 후, linearLayer 함수의 역할을 하는 레이어를 아래 링크에서 찾아서 적용해봅시다.\n",
-    "      - https://www.tensorflow.org/api_guides/python/contrib.layers\n",
-    "  - linearLayer 함수에서 use_contribute=True로 설정\n",
-    "\n",
-    "### Problem 5. 더 deep한 NN을 만들어 봅시다.\n",
-    "  - 4-layer NN을 구현하고, 성능이 나오는 파라미터 (hidden layer의 dimension들, learning rate)를 찾기\n",
-    "  - note: buildModel 함수의 buildInference 함수 호출하는 부분도 수정 필요\n"
+    "#### API reference\n",
+    "  - https://www.tensorflow.org/api_docs/python/tf/contrib/layers  "
    ]
   },
   {
@@ -68,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -95,8 +66,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Layer Fuctions\n",
-    "  - Linear layer"
+    "#### Problem 1. 아래의 구조를 가지는 CNN 작성\n",
+    "  - Network (2 convolutional followed by 2 fully connected (linear) layer)\n",
+    "    - conv1: output_dim (32), filter_size (3,3), stride (2) without dropout\n",
+    "    - max_pool1: filter size (2,2), stride (2)\n",
+    "    - conv2: output_dim (64), filter_size (3,3) with dropout (keep_prob=0.8)\n",
+    "    - max_pool2: filter size (2,2), stride (2)\n",
+    "    - flat_feat: linear 연산을 위해 convolutional layer를 통과한 값을 (1, *)의 벡터로 변환, 결과적으로 (batch_size, *)의 매트릭스를 반환\n",
+    "    - fc1: linear layer (output_dim: 256) with dropout (keep_prob=0.8)\n",
+    "    - fc2: linear layer (output_dim: # of labels) without relu, dropout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def buildInference(images, num_labels):\n",
+    "    \"\"\" Build CNN network\n",
+    "    Args:\n",
+    "        images: 인풋 이미지\n",
+    "        num_lables: 레이블 수\n",
+    "    Returns:\n",
+    "        return CNN network \n",
+    "    \"\"\"\n",
+    "    # TODO: 아래 layer를 정의하세요.\n",
+    "    conv1     = tf.contrib.layers.conv2d(images, 32, [3, 3])\n",
+    "    max_pool1 = tf.contrib.layers.max_pool2d(conv1, [2, 2])\n",
+    "    conv2     = tf.contrib.layers.conv2d(max_pool1, 64, [3, 3],\n",
+    "                    normalizer_fn=tf.nn.dropout,\n",
+    "                    normalizer_params={'keep_prob': 0.8})\n",
+    "    max_pool2 = tf.contrib.layers.max_pool2d(conv2, [2, 2])\n",
+    "\n",
+    "    flat_feat = tf.contrib.layers.flatten(max_pool2)\n",
+    "\n",
+    "    # TODO: 아래 layer를 정의하세요.\n",
+    "    fc1 = tf.contrib.layers.fully_connected(flat_feat, 256)\n",
+    "    fc2 = tf.contrib.layers.fully_connected(fc1, num_labels, activation_fn=None)\n",
+    "    \n",
+    "    return tf.nn.softmax(fc2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Problem 2. 각자의 CNN 모델 구성하기\n",
+    "  - filter size, layer 수 등을 바꿔서 구성해보세요.\n",
+    "  - 마지막 layer들은 위와 같이 (flat_feat -> fc1 -> fc2)가 되도록 해주세요.\n",
+    "  - 단 fc1의 output_dim은 바꾸셔도 됩니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 각자의 네트워크이므로 솔루션 제공 X"
    ]
   },
   {
@@ -107,43 +135,22 @@
    },
    "outputs": [],
    "source": [
-    "def linearLayer(inp, inp_dim, out_dim, with_relu=False, \\\n",
-    "                with_dropout=False, prefix='hidden', use_contribute=False):\n",
-    "    \"\"\" Linear layer\n",
+    "def buildYourInference(images, num_labels):\n",
+    "    \"\"\" Build CNN network\n",
     "    Args:\n",
-    "        inp: input data, [batch_size, inp_dim]\n",
-    "        inp_dim: input dimension\n",
-    "        out_dim: output dimension\n",
+    "        images: 인풋 이미지\n",
+    "        num_lables: 레이블 수\n",
     "    Returns:\n",
-    "        out: Output tensor with the computed logits, [batch_size, out_dim]\n",
-    "             return (inp * weight + bias)\n",
+    "        return CNN network \n",
     "    \"\"\"\n",
-    "    print '%s: %d-dim ->%d-dim (relu: %s, dropout: %s, contribute:%s)' \\\n",
-    "            % (prefix, inp_dim, out_dim, with_relu, with_dropout, use_contribute)\n",
+    "    # TODO: 아래 각자의 layer를 정의하세요.\n",
+    "\n",
+    "\n",
+    "    flat_feat = tf.contrib.layers.flatten(       )\n",
+    "    fc1 = \n",
+    "    fc2 = \n",
     "    \n",
-    "    with tf.name_scope(prefix):\n",
-    "        if not use_contribute :\n",
-    "            # Problem 1\n",
-    "            # TODO: initializing weight using normal distribution, mean (0.0) and std (0.1) \n",
-    "            \n",
-    "            weight = tf.Variable(TODO_FillHere, name='weights') # TODO\n",
-    "            bias = tf.Variable(tf.zeros([out_dim]), name='biases')\n",
-    "            out = tf.matmul(inp, weight) + bias\n",
-    "            \n",
-    "            if with_relu : \n",
-    "                # Problem 2\n",
-    "                # TODO: Apply relu operation\n",
-    "                \n",
-    "            if with_dropout :\n",
-    "                # Problem 3\n",
-    "                # TODO: Apply dropout operation\n",
-    "                \n",
-    "                \n",
-    "        else :\n",
-    "            # Problem 4\n",
-    "            # TODO: Using tf.contrib.layers utility\n",
-    "            \n",
-    "    return out"
+    "    return tf.nn.softmax(fc2)"
    ]
   },
   {
@@ -158,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -166,42 +173,17 @@
    },
    "outputs": [],
    "source": [
+    "# Functions of model construction\n",
     "def buildInputHolders():\n",
     "    \"\"\" define placeholders for model inputs\n",
     "    Returns:\n",
     "        img_holder: images placeholder\n",
     "        label_hodler: labels placeholder\n",
     "    \"\"\"\n",
-    "    img_holder = tf.placeholder(tf.float32, [None, 28*28])\n",
+    "    img_holder = tf.placeholder(tf.float32, [None, 28, 28, 1])\n",
     "    label_holder = tf.placeholder(tf.float32, [None, 10])\n",
     "    \n",
     "    return img_holder, label_holder\n",
-    "\n",
-    "\n",
-    "def buildInference(images, img_dim, label_num, hidden1_units, hidden2_units):\n",
-    "    \"\"\"Build the MNIST model up to where it may be used for inference.\n",
-    "    Args:\n",
-    "        images: Images placeholder, from inputs().\n",
-    "        hidden1_units: Size of the first hidden layer.\n",
-    "        hidden2_units: Size of the second hidden layer.\n",
-    "    Returns:\n",
-    "        pred: Output tensor with the computed logits.\n",
-    "    \"\"\"\n",
-    "    # Hidden 1\n",
-    "    hidden1 = linearLayer(images, img_dim, hidden1_units, prefix='hidden1')\n",
-    "    # Hidden 2\n",
-    "    hidden2 = linearLayer(hidden1, hidden1_units,hidden2_units, prefix='hidden2')\n",
-    "    \n",
-    "    # Problem 5\n",
-    "    # TODO: adding additional linear layer\n",
-    "    \n",
-    "    # Linear\n",
-    "    # 마지막 레이블에 대한 확률값을 예측하는 layer에서는 relu와 dropout을 적용하지 않습니다.\n",
-    "    pred = linearLayer(hidden2, hidden2_units, \\\n",
-    "                       label_num, with_relu=False, \\\n",
-    "                       with_dropout=False, prefix='linear')\n",
-    "    \n",
-    "    return tf.nn.softmax(pred)\n",
     "\n",
     "def buildLoss(preds, labels):\n",
     "    \"\"\"Calculates the loss from the predictions and the labels.\n",
@@ -242,7 +224,8 @@
     "        acc : accuracy\n",
     "    \"\"\"\n",
     "    imgs, labels = buildInputHolders()\n",
-    "    preds = buildInference(imgs, 28*28, 10, 128, 32) # for Problem 5, should be changed\n",
+    "    preds = buildInference(imgs, 10)\n",
+    "    #preds = buildYourInference(imgs, 10)\n",
     "    loss = buildLoss(preds, labels)\n",
     "    acc = buildAccuracy(preds, labels)\n",
     "    \n",
@@ -260,13 +243,12 @@
     "editable": true
    },
    "source": [
-    "### Main Function\n",
-    "  - 각 문제를 푼 후 아래 두 셀을 실행하세요."
+    "### Main Function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -277,7 +259,7 @@
     "# define parameters\n",
     "params = {}\n",
     "params['batch_size'] = 100\n",
-    "params['lr'] = 0.5\n",
+    "params['lr'] = 0.1\n",
     "params['total_batch'] = int(mnist.train.num_examples/params['batch_size'])\n",
     "\n",
     "# build model\n",
@@ -286,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -297,17 +279,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0001 Avg. cost = 0.449\n",
-      "Epoch: 0002 Avg. cost = 0.196\n",
-      "Epoch: 0003 Avg. cost = 0.142\n",
-      "Epoch: 0004 Avg. cost = 0.112\n",
-      "Epoch: 0005 Avg. cost = 0.093\n",
-      "Epoch: 0006 Avg. cost = 0.077\n",
-      "Epoch: 0007 Avg. cost = 0.067\n",
-      "Epoch: 0008 Avg. cost = 0.057\n",
-      "Epoch: 0009 Avg. cost = 0.050\n",
-      "Epoch: 0010 Avg. cost = 0.045\n",
-      "Test Accuracy:  0.9744\n"
+      "Epoch: 01 Avg. cost = 0.305\n",
+      "Epoch: 02 Avg. cost = 0.087\n",
+      "Epoch: 03 Avg. cost = 0.061\n",
+      "Epoch: 04 Avg. cost = 0.047\n",
+      "Epoch: 05 Avg. cost = 0.039\n",
+      "Epoch: 06 Avg. cost = 0.032\n",
+      "Epoch: 07 Avg. cost = 0.028\n",
+      "Epoch: 08 Avg. cost = 0.023\n",
+      "Epoch: 09 Avg. cost = 0.020\n",
+      "Epoch: 10 Avg. cost = 0.018\n",
+      "Test Accuracy:  0.9892\n"
      ]
     }
    ],
@@ -324,21 +306,24 @@
     "\n",
     "        for i in range(total_batch):\n",
     "            batch_xs, batch_ys = mnist.train.next_batch(batch_size)\n",
+    "            # 이미지 데이터를 CNN 모델을 위한 자료형태인 [height width channel] 의 형태로 재구성합니다.\n",
+    "            batch_xs = batch_xs.reshape(-1, 28, 28, 1)\n",
+    "            \n",
     "            _, cost_val = sess.run([train_step, loss], \\\n",
     "                                   feed_dict={imgs: batch_xs, labels: batch_ys})\n",
     "            total_cost += cost_val\n",
     "\n",
-    "        print \"Epoch:\", \"%04d\" % (epoch + 1), \\\n",
+    "        print \"Epoch:\", \"%02d\" % (epoch + 1), \\\n",
     "            \"Avg. cost =\", '{:.3f}'.format(total_cost / total_batch)\n",
     "\n",
     "    # 테스트 데이터에 대한 정확도\n",
     "    print \"Test Accuracy: \", sess.run(acc, \\\n",
-    "                    feed_dict={imgs: mnist.test.images, labels: mnist.test.labels})"
+    "                    feed_dict={imgs: mnist.test.images.reshape(-1, 28, 28, 1), \\\n",
+    "                               labels: mnist.test.labels})"
    ]
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
