--- a/week_1/solution/003_Multi_layer_NN.ipynb
+++ b/week_1/solution/003_Multi_layer_NN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -101,14 +101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def linearLayer(inp, inp_dim, out_dim, with_relu=False, \\\n",
-    "                with_dropout=False, prefix='hidden', use_contribute=False):\n",
+    "def linearLayer(inp, inp_dim, out_dim, with_relu=True, \\\n",
+    "                with_dropout=True, prefix='hidden', use_contribute=True):\n",
     "    \"\"\" Linear layer\n",
     "    Args:\n",
     "        inp: input data, [batch_size, inp_dim]\n",
@@ -123,26 +123,44 @@
     "    \n",
     "    with tf.name_scope(prefix):\n",
     "        if not use_contribute :\n",
-    "            # Problem 1\n",
-    "            # TODO: initializing weight using normal distribution, mean (0.0) and std (0.1) \n",
-    "            \n",
-    "            weight = tf.Variable(TODO_FillHere, name='weights') # TODO\n",
-    "            bias = tf.Variable(tf.zeros([out_dim]), name='biases')\n",
+    "            \"\"\" Problem 1\n",
+    "            TODO: initializing weight using normal distribution, mean (1.0) and std (0.1) \n",
+    "            \"\"\"\n",
+    "            weight = tf.Variable(tf.truncated_normal([inp_dim, out_dim],\n",
+    "                        stddev=0.1),name='weights')\n",
+    "            bias = tf.Variable(tf.constant(0.1, shape=[out_dim]), name='biases')\n",
     "            out = tf.matmul(inp, weight) + bias\n",
     "            \n",
     "            if with_relu : \n",
-    "                # Problem 2\n",
-    "                # TODO: Apply relu operation\n",
-    "                \n",
+    "                \"\"\" Problem 2\n",
+    "                TODO: Apply relu operation\n",
+    "                \"\"\"\n",
+    "                out = tf.nn.relu(out)\n",
     "            if with_dropout :\n",
-    "                # Problem 3\n",
-    "                # TODO: Apply dropout operation\n",
-    "                \n",
+    "                \"\"\" Problem 3\n",
+    "                TODO: Apply dropout operation\n",
+    "                \"\"\"\n",
+    "                out = tf.nn.dropout(out, 0.8)\n",
     "                \n",
     "        else :\n",
-    "            # Problem 4\n",
-    "            # TODO: Using tf.contrib.layers utility\n",
-    "            \n",
+    "            \"\"\" Problem 4\n",
+    "            TODO: Using tf.contrib.layers utility\n",
+    "            \"\"\"\n",
+    "            if with_relu : \n",
+    "                if with_dropout:\n",
+    "                    out = tf.contrib.layers.fully_connected(inp, out_dim,\\\n",
+    "                                     normalizer_fn=tf.nn.dropout, \\\n",
+    "                                     normalizer_params={'keep_prob':0.8})\n",
+    "                else :\n",
+    "                    out = tf.contrib.layers.fully_connected(inp, out_dim)\n",
+    "            else : \n",
+    "                if with_dropout :\n",
+    "                    out = tf.contrib.layers.fully_connected(inp, out_dim,\\\n",
+    "                                     activation_fn=None, \\\n",
+    "                                     normalizer_fn=tf.nn.dropout, \\\n",
+    "                                     normalizer_params={'keep_prob':0.8})\n",
+    "                else :\n",
+    "                    out = tf.contrib.layers.fully_connected(inp, out_dim, activation_fn=None)\n",
     "    return out"
    ]
   },
@@ -158,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -166,6 +184,7 @@
    },
    "outputs": [],
    "source": [
+    "# Functions of model construction\n",
     "def buildInputHolders():\n",
     "    \"\"\" define placeholders for model inputs\n",
     "    Returns:\n",
@@ -177,8 +196,12 @@
     "    \n",
     "    return img_holder, label_holder\n",
     "\n",
+    "\"\"\" Problem 4\n",
+    "TODO: adding additional linear layer\n",
+    "\"\"\"\n",
+    "def buildInference(images, img_dim, label_num, hidden1_units, \\\n",
+    "       hidden2_units, hidden3_units=None):\n",
     "\n",
-    "def buildInference(images, img_dim, label_num, hidden1_units, hidden2_units):\n",
     "    \"\"\"Build the MNIST model up to where it may be used for inference.\n",
     "    Args:\n",
     "        images: Images placeholder, from inputs().\n",
@@ -191,14 +214,21 @@
     "    hidden1 = linearLayer(images, img_dim, hidden1_units, prefix='hidden1')\n",
     "    # Hidden 2\n",
     "    hidden2 = linearLayer(hidden1, hidden1_units,hidden2_units, prefix='hidden2')\n",
-    "    \n",
-    "    # Problem 5\n",
-    "    # TODO: adding additional linear layer\n",
+    "        \n",
+    "    \"\"\" Problem 5\n",
+    "        TODO: adding additional linear layer\n",
+    "    \"\"\"\n",
+    "    # Hidden 3\n",
+    "    if hidden3_units != None :\n",
+    "        hidden3 = linearLayer(hidden2, hidden2_units, hidden3_units, prefix='hidden3')\n",
+    "    else :\n",
+    "        hidden3 = hidden2\n",
+    "        hidden3_units = hidden2_units\n",
     "    \n",
     "    # Linear\n",
     "    # 마지막 레이블에 대한 확률값을 예측하는 layer에서는 relu와 dropout을 적용하지 않습니다.\n",
-    "    pred = linearLayer(hidden2, hidden2_units, \\\n",
-    "                       label_num, with_relu=False, \\\n",
+    "    pred = linearLayer(hidden3, hidden3_units, \\\n",
+    "                       label_num, with_relu=False,\\\n",
     "                       with_dropout=False, prefix='linear')\n",
     "    \n",
     "    return tf.nn.softmax(pred)\n",
@@ -242,7 +272,8 @@
     "        acc : accuracy\n",
     "    \"\"\"\n",
     "    imgs, labels = buildInputHolders()\n",
-    "    preds = buildInference(imgs, 28*28, 10, 128, 32) # for Problem 5, should be changed\n",
+    "    #preds = buildInference(imgs, 28*28, 10, 128, 32)\n",
+    "    preds = buildInference(imgs, 28*28, 10, 256, 128, 64) # for Problem 5, should be changed\n",
     "    loss = buildLoss(preds, labels)\n",
     "    acc = buildAccuracy(preds, labels)\n",
     "    \n",
@@ -260,33 +291,12 @@
     "editable": true
    },
    "source": [
-    "### Main Function\n",
-    "  - 각 문제를 푼 후 아래 두 셀을 실행하세요."
+    "### Main Function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "# define parameters\n",
-    "params = {}\n",
-    "params['batch_size'] = 100\n",
-    "params['lr'] = 0.5\n",
-    "params['total_batch'] = int(mnist.train.num_examples/params['batch_size'])\n",
-    "\n",
-    "# build model\n",
-    "imgs, labels, train_step, loss, acc = buildModel(params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -297,17 +307,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0001 Avg. cost = 0.449\n",
-      "Epoch: 0002 Avg. cost = 0.196\n",
-      "Epoch: 0003 Avg. cost = 0.142\n",
-      "Epoch: 0004 Avg. cost = 0.112\n",
-      "Epoch: 0005 Avg. cost = 0.093\n",
-      "Epoch: 0006 Avg. cost = 0.077\n",
-      "Epoch: 0007 Avg. cost = 0.067\n",
-      "Epoch: 0008 Avg. cost = 0.057\n",
-      "Epoch: 0009 Avg. cost = 0.050\n",
-      "Epoch: 0010 Avg. cost = 0.045\n",
-      "Test Accuracy:  0.9744\n"
+      "hidden1: 784-dim ->256-dim (relu: True, dropout: True, contribute:True)\n",
+      "hidden2: 256-dim ->128-dim (relu: True, dropout: True, contribute:True)\n",
+      "hidden3: 128-dim ->64-dim (relu: True, dropout: True, contribute:True)\n",
+      "linear: 64-dim ->10-dim (relu: False, dropout: False, contribute:True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define parameters\n",
+    "params = {}\n",
+    "params['batch_size'] = 100\n",
+    "params['lr'] = 0.1\n",
+    "params['total_batch'] = int(mnist.train.num_examples/params['batch_size'])\n",
+    "\n",
+    "# build model\n",
+    "imgs, labels, train_step, loss, acc = buildModel(params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Epoch:', '01', 'Avg. cost =', '0.543')\n",
+      "('Epoch:', '02', 'Avg. cost =', '0.245')\n",
+      "('Epoch:', '03', 'Avg. cost =', '0.185')\n",
+      "('Epoch:', '04', 'Avg. cost =', '0.151')\n",
+      "('Epoch:', '05', 'Avg. cost =', '0.129')\n",
+      "('Epoch:', '06', 'Avg. cost =', '0.116')\n",
+      "('Epoch:', '07', 'Avg. cost =', '0.104')\n",
+      "('Epoch:', '08', 'Avg. cost =', '0.093')\n",
+      "('Epoch:', '09', 'Avg. cost =', '0.085')\n",
+      "('Epoch:', '10', 'Avg. cost =', '0.077')\n",
+      "('Test Accuracy: ', 0.9660002)\n"
      ]
     }
    ],
@@ -328,17 +369,16 @@
     "                                   feed_dict={imgs: batch_xs, labels: batch_ys})\n",
     "            total_cost += cost_val\n",
     "\n",
-    "        print \"Epoch:\", \"%04d\" % (epoch + 1), \\\n",
-    "            \"Avg. cost =\", '{:.3f}'.format(total_cost / total_batch)\n",
+    "        print( \"Epoch:\", \"%02d\" % (epoch + 1), \\\n",
+    "            \"Avg. cost =\", '{:.3f}'.format(total_cost / total_batch))\n",
     "\n",
     "    # 테스트 데이터에 대한 정확도\n",
-    "    print \"Test Accuracy: \", sess.run(acc, \\\n",
-    "                    feed_dict={imgs: mnist.test.images, labels: mnist.test.labels})"
+    "    print(\"Test Accuracy: \", sess.run(acc, \\\n",
+    "                    feed_dict={imgs: mnist.test.images, labels: mnist.test.labels}))"
    ]
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
