--- a/week_1/example_codes/005_TRANSFER_LEARNING.ipynb
+++ b/week_1/example_codes/005_TRANSFER_LEARNING.ipynb
@@ -34,7 +34,8 @@
    "source": [
     "### Transfer Learning\n",
     "  - 이미 다른 dataset으로 training되어 있는 네트워크를 이용해 다른 Task를 할 수 있도록 Training 시키는 것\n",
-    "  - 초기부터 training하는 것보다 성능이 좋다."
+    "  - 초기부터 training하는 것보다 성능이 좋다.\n",
+    "  - pip install keras"
    ]
   },
   {
