--- a/week_1/example_codes/006_TensorBoard.ipynb
+++ b/week_1/example_codes/006_TensorBoard.ipynb
@@ -52,7 +52,10 @@
     "    - tf.summary.image(name, image, max_number)\n",
     "  - Histograms\n",
     "    - 여러 값의 분포를 히스토그램으로 나타내준다.\n",
-    "    - tf.summary.histogram(name, value)"
+    "    - tf.summary.histogram(name, value)\n",
+    "  - \n",
+    "  - export LD_LIBRARY_PATH=\"$LD_LIBRARY_PATH:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64\"\n",
+    "  - export CUDA_HOME=/usr/local/cuda"
    ]
   },
   {
