--- a/week_1/example_codes/006_TensorBoard.ipynb
+++ b/week_1/example_codes/006_TensorBoard.ipynb
@@ -55,7 +55,8 @@
     "    - tf.summary.histogram(name, value)\n",
     "  - \n",
     "  - export LD_LIBRARY_PATH=\"$LD_LIBRARY_PATH:/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64\"\n",
-    "  - export CUDA_HOME=/usr/local/cuda"
+    "  - export CUDA_HOME=/usr/local/cuda\n",
+    "  - sudo apt-get install libcupti-dev"
    ]
   },
   {
