--- a/week_2/practice/007_RNN_with_Tensorboard.ipynb
+++ b/week_2/practice/007_RNN_with_Tensorboard.ipynb
@@ -74,6 +74,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Download the data.\n",
+    "url = 'http://cvlab.postech.ac.kr/~wgchang/data/others/'\n",
+    "\n",
+    "def maybe_download(filename, expected_bytes):\n",
+    "    \"\"\"Download a file if not present, and make sure it's the right size.\"\"\"\n",
+    "    if not os.path.exists(filename):\n",
+    "        filename, _ = urllib.request.urlretrieve(url + os.path.basename(filename), filename)\n",
+    "    statinfo = os.stat(filename)\n",
+    "    if statinfo.st_size == expected_bytes:\n",
+    "        print('Found and verified', filename)\n",
+    "    else:\n",
+    "        print(statinfo.st_size)\n",
+    "        raise Exception(\n",
+    "            'Failed to verify ' + filename + '. Can you get to it with a browser?')\n",
+    "    return filename\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found and verified ../data/sherlock.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename = maybe_download('../data/sherlock.txt', 3377296)\n",
+    "# filename = maybe_download('../data/sherlock_short.txt', 609394)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -82,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -105,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -125,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -133,7 +178,7 @@
    },
    "outputs": [],
    "source": [
-    "with open('../data/sherlock.txt', 'r') as f:\n",
+    "with open(filename, 'r') as f:\n",
     "    text=f.read()\n",
     "text=remove_multiple_s(text)\n",
     "charset = set(text)\n",
@@ -151,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -162,7 +207,7 @@
        "3140216"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -187,7 +232,7 @@
        "' CHAPTER I  Mr. Sherlock Holmes  In the year 1878 I took my degree of Doctor of Medicine of the  Uni'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -216,7 +261,7 @@
        "       50, 57, 46,  1, 56, 49,  1, 63, 51, 46,  1,  1, 36, 57, 50], dtype=int32)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
