Add makedirs for data directory

--- a/week_2/practice/007_RNN_with_Tensorboard.ipynb
+++ b/week_2/practice/007_RNN_with_Tensorboard.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -87,6 +87,8 @@
     "def maybe_download(filename, expected_bytes):\n",
     "    \"\"\"Download a file if not present, and make sure it's the right size.\"\"\"\n",
     "    if not os.path.exists(filename):\n",
+    "        if not os.path.isdir(os.path.dirname(filename)):\n",
+    "            os.makedirs(os.path.dirname(filename))\n",
     "        filename, _ = urllib.request.urlretrieve(url + os.path.basename(filename), filename)\n",
     "    statinfo = os.stat(filename)\n",
     "    if statinfo.st_size == expected_bytes:\n",
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -6462,7 +6464,7 @@
     "    train_writer = tf.summary.FileWriter('./logs/train', sess.graph)\n",
     "    test_writer = tf.summary.FileWriter('./logs/test')\n",
     "       \n",
-    "    n_batches = int(train_x.shape[1]/params['time_steps'])\n",
+    "    n_batches = int(train_x.shape[1]/params['time_steps'])merged\n",
     "    iterations = n_batches * epochs\n",
     "     # 기존의 checkpoint를 읽어서 다시 학습\n",
     "    if checkpoint:\n",
@@ -6502,7 +6504,7 @@
     "                # validation loss 확인. dropout의 값을 1로 설정하여 모든 node가 동작하도록 한다.\n",
     "                val_loss = []\n",
     "                new_state = sess.run(model.initial_state)\n",
-    "                for x, y in get_batch([val_x, val_y], params['time_steps']):\n",
+    "                for x, y in get_batch([val_x, val_y], params['time_steps']):merged\n",
     "                    feed = {model.inputs: x,\n",
     "                            model.targets: y,\n",
     "                            model.keep_prob: 1.,\n",
@@ -6834,7 +6836,8 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": false
    },
    "outputs": [
     {
