--- a/week_2/practice/007_RNN_with_Tensorboard.ipynb
+++ b/week_2/practice/007_RNN_with_Tensorboard.ipynb
@@ -87,6 +87,8 @@
     "def maybe_download(filename, expected_bytes):\n",
     "    \"\"\"Download a file if not present, and make sure it's the right size.\"\"\"\n",
     "    if not os.path.exists(filename):\n",
+    "        if not os.path.isdir(os.path.dirname(filename)):\n",
+    "            os.makedirs(os.path.dirname(filename))\n",
     "        filename, _ = urllib.request.urlretrieve(url + os.path.basename(filename), filename)\n",
     "    statinfo = os.stat(filename)\n",
     "    if statinfo.st_size == expected_bytes:\n",
