(bug fix) mistypo is fixed

--- a/week_2/practice/007_RNN_with_Tensorboard.ipynb
+++ b/week_2/practice/007_RNN_with_Tensorboard.ipynb
@@ -6464,7 +6464,7 @@
     "    train_writer = tf.summary.FileWriter('./logs/train', sess.graph)\n",
     "    test_writer = tf.summary.FileWriter('./logs/test')\n",
     "       \n",
-    "    n_batches = int(train_x.shape[1]/params['time_steps'])merged\n",
+    "    n_batches = int(train_x.shape[1]/params['time_steps'])\n",
     "    iterations = n_batches * epochs\n",
     "     # 기존의 checkpoint를 읽어서 다시 학습\n",
     "    if checkpoint:\n",
@@ -6504,7 +6504,7 @@
     "                # validation loss 확인. dropout의 값을 1로 설정하여 모든 node가 동작하도록 한다.\n",
     "                val_loss = []\n",
     "                new_state = sess.run(model.initial_state)\n",
-    "                for x, y in get_batch([val_x, val_y], params['time_steps']):merged\n",
+    "                for x, y in get_batch([val_x, val_y], params['time_steps']):\n",
     "                    feed = {model.inputs: x,\n",
     "                            model.targets: y,\n",
     "                            model.keep_prob: 1.,\n",
