Change Title of 008 word embeddings

--- a/week_2/practice/008_Word_Embeddings.ipynb
+++ b/week_2/practice/008_Word_Embeddings.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Word embeddings, Sequnce to Sequence\n",
+    "# Word embeddings\n",
+    "\n",
     "## <학습목표>\n",
     "1. word embeddings의 필요성과 자연어 처리(natural language processing)에서 word embeddings의 사용에 대해서 알아보자.\n",
     "2. Tensorflow의 word embeddings tutorial의 내용을 숙지하자.\n",
