Change RNN_layer part not to share weights

--- a/week_2/practice/007_RNN_with_Tensorboard.ipynb
+++ b/week_2/practice/007_RNN_with_Tensorboard.ipynb
@@ -544,11 +544,14 @@
     "    \n",
     "    # RNN의 한 종류인 LSTM 구현\n",
     "    with tf.name_scope(\"RNN_layers\"):\n",
-    "        lstm = rnn.BasicLSTMCell(lstm_size)\n",
-    "        # rnn.DropoutWrapper를 이용하여 RNN model에 Dropout 추가\n",
-    "        drop = rnn.DropoutWrapper(lstm, output_keep_prob=keep_prob)\n",
-    "        # LSTM hidden layer 추가, weight sharing\n",
-    "        cell = rnn.MultiRNNCell([drop] * num_layers)\n",
+    "        lstm_layers = []\n",
+    "        for _ in range(num_layers):\n",
+    "            lstm = rnn.BasicLSTMCell(lstm_size)\n",
+    "            # rnn.DropoutWrapper를 이용하여 RNN model에 Dropout 추가\n",
+    "            drop = rnn.DropoutWrapper(lstm, output_keep_prob=keep_prob)\n",
+    "            # LSTM hidden layer 추가, weight sharing\n",
+    "            lstm_layers.append(drop)\n",
+    "        cell = rnn.MultiRNNCell(lstm_layers)\n",
     "\n",
     "    # tf.nn.dynamic_rnn함수를 이용해 RNN을 실행\n",
     "    with tf.name_scope(\"RNN_init_state\"):\n",
